--- a/backend/Booking-service/package.json
+++ b/backend/Booking-service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.9",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
