--- a/backend/Flight-service/package.json
+++ b/backend/Flight-service/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^1.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
