--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,19 +1,24 @@
-
-# Node.js dependencies
-node_modules/
-
-# Build output
-build/
-dist/
-
-# Environment files
-.env
-.env.*
-!.env.sample
-
 # Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDE/editor folders
-.vscode/
-.idea/
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
