--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.15",
     "uuid": "^13.0.0"
   },
