--- a/backend/Booking-service/package.json
+++ b/backend/Booking-service/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "amqplib": "^0.10.9",
@@ -21,6 +22,7 @@
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "socket.io": "^4.8.1"
   }
 }
