--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,7 +3,7 @@ name: Backend Microservice CI-CD
 on:
   push:
     paths:
-      - 'backend/**'
+      - "backend/**"
     branches:
       - main
   workflow_dispatch:
@@ -13,7 +13,6 @@ env:
   DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
 jobs:
-
   detectChanges:
     name: Detect changed backend services
     runs-on: ubuntu-latest
@@ -54,7 +53,7 @@ jobs:
           password: ${{ env.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+
       - name: Build and Push API Gateway
         uses: docker/build-push-action@v4
         with:
@@ -136,13 +135,12 @@ jobs:
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
             -H "Content-Type: application/json" \
-            https://api.render.com/deploy/srv-${{secrets.RENDER_API_GATEWAY_SERVICE_ID}}
+            https://api.render.com/deploy/srv-${{secrets.RENDER_API_GATEWAY_SERVICE_ID}}/deploys
 
       - name: Render deployment status
         if: success()
         run: |
           echo "API Gateway deployment successful."
-
 
   deploy-flight-service:
     name: Deploy Flight Service
