--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -135,7 +135,7 @@ jobs:
           curl -v -X POST \
             -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
             -H "Content-Type: application/json" \
-             https://api.render.com/v1/services/srv-${{secrets.RENDER_API_GATEWAY_SERVICE_ID}}/deploys
+            ${{secrets.RENDER_API_GATEWAY_SERVICE_ID}}
 
       - name: Render deployment status
         if: success()
